testsuite/tests/dependent/should_fail/T13601.stderr

T13601.hs:18:16: error:
    • Expected a type, but ‘Logic a’ has kind ‘TYPE (Rep rep1)’
    • In the first argument of ‘Boolean’, namely ‘(Logic a)’
      In the class declaration for ‘Eq’
